# smalltest

./: .gitignore  readme.md  run_tests.py  setup.cfg
docs/: conf.py  discover.rst  index.rst  structure.md  structure.rst
src/smalltest/: discover.py  main.py  markers.py  reporter.py  run.py  runner.py
src/smalltest/internals/: __init__.py  rewrite_assert.py  rewrite_assert_statements.py
src/smalltest/suite/: __init__.py  discover.py  report.py  run.py
src/smalltest/tools/: __init__.py  _exception.py  _modifiers.py
src/smalltest/util/: __init__.py  writelndecorator.py
tests/: test_discovery.py  test_fail.py
tests/smalltest/: test_tools.py
tests_unittest/: test_discovery.py
