[metadata]
name = smalltest
version = 0.0.1
author = David C Ellis
description = Minimal test discovery and runner
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.extras_require]
tests = coverage>=6.5
docs = sphinx