[metadata]
name = smalltest
version = 0.0.3
author = David C Ellis
description = Minimal test discovery and runner
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
python_requires = >=3.10

[options.extras_require]
tests = coverage>=6.5

[options.entry_points]
console_scripts =
    smalltest = smalltest.main:main
